[package]
name = "tower-azuread-oidc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
futures-util = "0.3"
http = "0.2"
http-body = "0.4"
hyper = "0.14"
jsonwebtoken = "7"
pin-project-lite = "0.2"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.7"
tower = "0.4"
tracing = "0.1"
url = "2"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
axum = "0.4"
listenfd = "0.3"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
